# DealBreakers

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  mcp_tools.json  pyproject.toml  requirements.txt  tsm_sample.json
.specstory/: .project.json  statistics.json
dealbreakers/: __init__.py  __main__.py  agent.py  catalog.py  cli.py  composer.py  config.py  dealroom.py  evaluators.py  inventory.py  llm.py  mcp.py  mcp_client.py  messages.py  models.py  negotiation.py  negotiator.py  offers.py  orchestrator.py  presenter.py  profile.py  prompts.py  runner.py  search.py  strategy.py  util.py
docs/: ARCHITECTURE.md  DealBreakers-One-Pager.tex  NEGOTIATION-FLOW.md
logs/: 05e9dd32-dc91-4406-addf-f417dfd9b3ed.jsonl  132eb035-3c37-46bd-9d29-dd0d06765c3d.jsonl  29753c36-6638-4834-b431-c197c3da7057.jsonl  3952866d-df79-4ba8-80ac-a598fc23cd6c.jsonl  3c657b18-cd8f-43e0-a2fd-4df202befbba.jsonl  3f87c063-ef90-4f8c-9175-72943d5de92f.jsonl  708e06eb-f9e1-41cf-b258-e0bca22d8dfd.jsonl  83c621b1-22ce-4b8b-a531-0e16672690de.jsonl  8a5046b7-c3a9-4f96-b7c9-b35635504ab5.jsonl  a1550872-5fdb-4c7f-831a-1335a8a28f54.jsonl  ae3ef441-81ea-4eac-b790-a01d3a93d665.jsonl  bc647f5a-82a5-4085-a1d5-cb0d5733a4cb.jsonl  d22525b6-9063-4079-8bfa-30e37c3003fe.jsonl  dee8b9cf-466c-4213-92a1-c8392873ef9b.jsonl  e3a4f1da-7c14-4867-88f3-dc8ae95a14c4.jsonl  fbd67607-3510-4c78-89a9-839f4e8f9cf9.jsonl
scripts/: analyze_branches.py  analyze_transcript.py  batch_gordon.py  build_state.py  close_bob.py  close_cris.py  close_elon.py  close_gordon.py  close_toni.py  compare_runners.py  discover_mcp_tools.py  (+21 more)
(+95 files in other folders)
